--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="navbar">
-            <img src="/logo.png" class="logo">
+            <img src="../img/img.png" class="logo">
             <nav>
                 <ul>
                     <li><a href="">Home</a></li>
@@ -19,26 +19,25 @@
                     <li><a href="">kkk</a></li>
                 </ul>
             </nav>
-            <img src="/cart.png" class="cart">
+            <img src="cart.png" class="cart">
         </div>
        <div class="content">
            <a href="" class="btn">2020 Collections</a>
            <h1>You should always<br> feel pretty</h1>
            <p>clothes that are sure to heat up your winter.</p>
             <div class="arrow-icons">
-                <img src="/back-arrow.png" >
-                <img src="/next-arrow.png" >
+                <img src="back-arrow.png" >
+                <img src="next-arrow.png" >
             </div>
 
        </div> 
 
-       <img src="/huyen.jpg" class="feature-img">
+       <img src="huyen.jpg" class="feature-img">
        <div class="social-links">
            <a href="">FACEBOOK</a>
            <a href="">INSTAGRAM</a>
            <a href="">TWITTER</a>
        </div>
-       <
 
 
     </div>
